# ime-fcitx5

./: .gitignore  .gitmodules  LICENSE  README.md  vcpkg-configuration.json
.github/workflows/: linux.yml  release-macos.yml  sync-aur-fcitx5.yml
fcitx5/: CMakeLists.txt  vcpkg.json
fcitx5/cmake/: FindFcitx5.cmake  LlamaCpp.cmake
fcitx5/fcitx5/: addon.conf.in  ime_config.cpp  ime_config.hpp  ime_engine.cpp  ime_engine.hpp  input_context_property.hpp  inputmethod.conf.in  plugin.json.in
fcitx5/service/: llama_backend.cpp  llama_backend.hpp  service_app.cpp  service_app.hpp  service_main.cpp  token_filter.hpp
fcitx5/shared/: ime_fcitx5_shared.cpp
fcitx5/shared/bopomofo/: keymap.cpp  keymap.hpp  syllable.cpp  syllable.hpp  table_engine.cpp  table_engine.hpp
fcitx5/shared/buffer/: composition_buffer.cpp  composition_buffer.hpp
fcitx5/shared/config/: config.cpp  config.hpp
fcitx5/shared/engine/: fallback_engine.cpp  fallback_engine.hpp  service_client.cpp  service_client.hpp  service_transport.cpp  service_transport.hpp
fcitx5/shared/input/: keypad.cpp  keypad.hpp
fcitx5/shared/ipc/: unix_socket.cpp  unix_socket.hpp
fcitx5/shared/protocol/: binary_codec.cpp  binary_codec.hpp  protocol.cpp  protocol.hpp
fcitx5/shared/text/: utf.cpp  utf.hpp
fcitx5/tests/: CMakeLists.txt  bopomofo_tests.cpp  buffer_tests.cpp  check_fcitx5_metadata.cmake  config_tests.cpp  keypad_tests.cpp  llama_backend_tests.cpp  protocol_tests.cpp  service_app_tests.cpp  service_client_tests.cpp  service_socket_tests.cpp  service_transport_tests.cpp  test_main.cpp
ime-service/: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.example.json  README.md  vcpkg-configuration.json  vcpkg.json
ime-service/.github/workflows/: sync-ime-fcitx5.yml
ime-service/src/: main.cpp
ime-service/src/core/: bopomofo.hpp
ime-service/src/engine/: engine.h  llamaEngine.hpp  llama_resources.cpp  llama_resources.hpp  model_runtime.cpp  model_runtime.hpp  session_engine.cpp  session_engine.hpp  tokenizer.hpp
ime-service/src/ml/: checkpoint.cpp  checkpoint.hpp  gguf_lora_writer.cpp  gguf_lora_writer.hpp  llama_model.cpp  llama_model.hpp  lora_linear.cpp  lora_linear.hpp  model_config.hpp  rms_norm.hpp  rotary_embedding.hpp  safetensors_reader.cpp  safetensors_reader.hpp  training_dataset.cpp  training_dataset.hpp  training_tokenizer.hpp
ime-service/src/pipe/: protocol.cpp  protocol.hpp  server.hpp
ime-service/src/platform/: server_strategy.cpp  server_strategy.hpp  unix_socket_server.cpp  unix_socket_server.hpp  unsupported_server.hpp  windows_named_pipe_server.hpp
ime-service/src/session/: session.hpp  session_manager.cpp  session_manager.hpp
ime-service/src/trainer/: main.cpp  trainer.cpp  trainer.hpp
ime-service/src/training/: adapter_publisher.cpp  adapter_publisher.hpp  feedback_store.cpp  feedback_store.hpp  sha256.cpp  sha256.hpp  system_environment.cpp  system_environment.hpp  training_orchestrator.cpp  training_orchestrator.hpp
ime-service/src/utils/: helper.hpp  runtime_paths.hpp  variant.hpp
ime-service/table/tokens/: bpmf.json  special_tokens.json
ime-service/tests/: feedback_store_tests.cpp  ml_tests.cpp  model_parity_test.cpp  personalization_effect_test.cpp  protocol_tests.cpp  trainer_smoke_test.cpp  training_lifecycle_tests.cpp
packaging/aur/: vcpkg.json
packaging/aur/llavon-ime-fcitx5-git/: .SRCINFO  PKGBUILD  README.md
packaging/macos/: uninstall.sh
packaging/macos/scripts/: postinstall
scripts/: package-macos.sh
tables/: bopomofo_char.json
tables/tokens/: chars.json  latin.json
